--- a/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
@@ -7,8 +7,18 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="blackjackfx.Controllers.CreatePlayersScreenController">
-    <stylesheets>
-        <URL value="@/blackjackfx/resources/CSS/createplayersscreen.css"/>
-    </stylesheets>
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.CreatePlayersScreenController">
+  <children>
+    <Pane layoutX="0.0" layoutY="0.0" prefHeight="400.0" prefWidth="600.0">
+      <children>
+        <Label layoutX="14.0" layoutY="14.0" text="Player Name" />
+        <TextField fx:id="TextName" layoutX="89.0" layoutY="11.0" prefWidth="200.0" />
+        <CheckBox fx:id="IsHuman" layoutX="89.0" layoutY="47.0" mnemonicParsing="false" text="Is Human Player?" />
+        <Button id="PlayerName" fx:id="BtnAdd" layoutX="300.0" layoutY="12.0" mnemonicParsing="false" onAction="#AddPlayer" text="Add Player" />
+        <Pane id="PlayersRegistered" fx:id="PlayerIn" layoutX="14.0" layoutY="100.0" prefHeight="252.0" prefWidth="572.000022070315" />
+        <Label layoutX="14.0" layoutY="84.0" text="Players Joined" />
+        <Button layoutX="498.0" layoutY="365.0" mnemonicParsing="false" text="Start Game" />
+      </children>
+    </Pane>
+  </children>
 </AnchorPane>
