--- a/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
@@ -17,7 +17,7 @@
         <Button id="PlayerName" fx:id="BtnAdd" layoutX="300.0" layoutY="12.0" mnemonicParsing="false" onAction="#AddPlayer" text="Add Player" />
         <Pane id="PlayersRegistered" fx:id="PlayerIn" layoutX="14.0" layoutY="100.0" prefHeight="252.0" prefWidth="572.000022070315" />
         <Label layoutX="14.0" layoutY="84.0" text="Players Joined" />
-        <Button layoutX="498.0" layoutY="365.0" mnemonicParsing="false" text="Start Game" />
+        <Button fx:id="BtnStart" layoutX="498.0" layoutY="365.0" mnemonicParsing="false" text="Start Game" />
       </children>
     </Pane>
   </children>
