--- a/BlackJackFX/src/blackjackfx/MainWindow.fxml
+++ b/BlackJackFX/src/blackjackfx/MainWindow.fxml
@@ -9,9 +9,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
-<?scenebuilder-stylesheet C:/java/JavaFXApplication2/src/newCascadeStyleSheet.css?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.MainWindowController">
   <children>
     <ImageView fitHeight="448.49998296560887" fitWidth="598.0" layoutX="1.0" layoutY="0.0" pickOnBounds="true" preserveRatio="true">
       <image>
@@ -30,7 +29,7 @@
                 <Glow level="0.7025157232704402" />
               </contentInput>
               <light>
-                <javafx.scene.effect.Light.Distant color="#808080" />
+                <javafx.scene.effect.Light.Distant color="GREY" />
               </light>
             </Lighting>
           </input>
