--- a/BlackJackFX/src/blackjackfx/MainWindow.fxml
+++ b/BlackJackFX/src/blackjackfx/MainWindow.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.MainWindowController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.MainWindowController" fx:controller="blackjackfx.MainWindowController" fx:controller="blackjackfx.MainWindowController" fx:controller="blackjackfx.MainWindowController">
   <children>
     <ImageView fitHeight="448.49998296560887" fitWidth="598.0" layoutX="1.0" layoutY="0.0" pickOnBounds="true" preserveRatio="true">
       <image>
