--- a/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
@@ -18,6 +18,7 @@
         <Label layoutX="14.0" layoutY="84.0" text="Players Joined" />
         <Button fx:id="BtnStart" layoutX="498.0" layoutY="365.0" mnemonicParsing="false" text="Start Game" />
         <FlowPane fx:id="PlayerIn" layoutX="14.0" layoutY="100.0" prefHeight="254.00009999999747" prefWidth="572.0" />
+        <Label fx:id="errorMessageLabel" layoutX="53.0" layoutY="68.0" prefWidth="511.0" text="" />
       </children>
     </Pane>
   </children>
