--- a/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.CreatePlayersScreenController">
   <children>
@@ -15,10 +16,17 @@
         <TextField fx:id="TextName" layoutX="89.0" layoutY="11.0" prefWidth="200.0" />
         <CheckBox fx:id="IsHuman" layoutX="89.0" layoutY="47.0" mnemonicParsing="false" text="Is Human Player?" />
         <Button id="PlayerName" fx:id="BtnAdd" layoutX="300.0" layoutY="12.0" mnemonicParsing="false" onAction="#AddPlayer" text="Add Player" />
-        <Label layoutX="14.0" layoutY="84.0" text="Players Joined" />
+        <Label layoutX="14.0" layoutY="89.0" text="Players Joined" />
         <Button fx:id="BtnStart" layoutX="498.0" layoutY="365.0" mnemonicParsing="false" text="Start Game" />
-        <FlowPane fx:id="PlayerIn" layoutX="14.0" layoutY="100.0" prefHeight="254.00009999999747" prefWidth="572.0" />
-        <Label fx:id="errorMessageLabel" layoutX="53.0" layoutY="68.0" prefWidth="511.0" text="" />
+        <FlowPane fx:id="PlayerIn" layoutX="14.0" layoutY="107.0" prefHeight="254.00009999999747" prefWidth="572.0" />
+        <Label fx:id="errorMessageLabel" layoutX="53.0" layoutY="68.0" prefHeight="21.9609375" prefWidth="511.0" text="" textAlignment="JUSTIFY" textFill="#ff3333" underline="true">
+          <font>
+            <Font size="12.0" />
+          </font>
+          <stylesheets>
+            <URL value="@resources/CSS/createplayersscreen.css" />
+          </stylesheets>
+        </Label>
       </children>
     </Pane>
   </children>
