--- a/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
@@ -17,7 +17,7 @@
         <CheckBox fx:id="IsHuman" layoutX="89.0" layoutY="47.0" mnemonicParsing="false" text="Is Human Player?" />
         <Button id="PlayerName" fx:id="BtnAdd" layoutX="300.0" layoutY="12.0" mnemonicParsing="false" onAction="#AddPlayer" text="Add Player" />
         <Label layoutX="14.0" layoutY="89.0" text="Players Joined" />
-        <Button fx:id="BtnStart" layoutX="498.0" layoutY="365.0" mnemonicParsing="false" text="Start Game" />
+        <Button fx:id="BtnStart" layoutX="498.0" layoutY="365.0" mnemonicParsing="false" onAction="#OnStartGame" text="Start Game" />
         <FlowPane fx:id="PlayerIn" layoutX="14.0" layoutY="107.0" prefHeight="254.00009999999747" prefWidth="572.0" />
         <Label fx:id="errorMessageLabel" layoutX="53.0" layoutY="68.0" prefHeight="21.9609375" prefWidth="511.0" text="" textAlignment="JUSTIFY" textFill="#ff3333" underline="true">
           <font>
