--- a/BlackJackFX/src/blackjackfx/MainWindow.fxml
+++ b/BlackJackFX/src/blackjackfx/MainWindow.fxml
@@ -10,13 +10,8 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml" fx:controller="blackjackfx.Controllers.MainWindowController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.MainWindowController">
   <children>
-    <ImageView fitHeight="448.49998296560887" fitWidth="598.0" layoutX="1.0" layoutY="0.0" pickOnBounds="true" preserveRatio="true">
-      <image>
-        <Image url="file:/C:/Users/miri/Documents/12_bg_green.png" />
-      </image>
-    </ImageView>
     <Label ellipsisString="..." graphicTextGap="4.0" layoutX="162.0" layoutY="45.0" prefHeight="135.0" prefWidth="391.0" text="BLACKJACK" textAlignment="CENTER" textFill="#777777" textOverrun="CLIP" underline="false" wrapText="false">
       <effect>
         <DropShadow spread="0.03968253968253968">
