--- a/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/gamescreen.css
@@ -3,5 +3,5 @@
  */
 
 .mainFxmlClass {
-    -fx-background-image: url('/blackjackfx/resources/Images/bacgreen.png');
+    //-fx-background-image: url('/blackjackfx/resources/Images/bacgreen.png');
 }
