--- a/BlackJackFX/src/blackjackfx/LoadScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/LoadScreen.fxml
@@ -7,6 +7,4 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="blackjackfx.Controllers.LoadScreenController">
-
-</AnchorPane>
+<AnchorPane id="AnchorPane" fx:id="root" prefHeight="284.0" prefWidth="569.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.LoadScreenController" />
