--- a/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/CreatePlayersScreen.fxml
@@ -3,23 +3,23 @@
 <?import java.lang.*?>
 <?import java.net.*?>
 <?import java.util.*?>
+<?import javafx.collections.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.CreatePlayersScreenController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="blackjackfx.Controllers.CreatePlayersScreenController">
   <children>
     <Pane layoutX="0.0" layoutY="0.0" prefHeight="400.0" prefWidth="600.0">
       <children>
-        <Label layoutX="14.0" layoutY="14.0" text="Player Name" />
-        <TextField fx:id="TextName" layoutX="89.0" layoutY="11.0" prefWidth="200.0" />
-        <CheckBox fx:id="IsHuman" layoutX="89.0" layoutY="47.0" mnemonicParsing="false" text="Is Human Player?" />
-        <Button id="PlayerName" fx:id="BtnAdd" layoutX="300.0" layoutY="12.0" mnemonicParsing="false" onAction="#AddPlayer" text="Add Player" />
-        <Label layoutX="14.0" layoutY="89.0" text="Players Joined" />
+        <Label fx:id="lblPlayerName" layoutX="14.0" layoutY="65.0" text="Player Name" />
+        <TextField fx:id="TextName" layoutX="131.0" layoutY="65.0" prefWidth="200.0" />
+        <Button id="PlayerName" fx:id="BtnAdd" layoutX="373.0" layoutY="63.0" mnemonicParsing="false" onAction="#AddPlayer" text="Add Player" />
+        <Label fx:id="lblPlayersJoined" layoutX="14.0" layoutY="136.0" text="Players Joined" />
         <Button fx:id="BtnStart" layoutX="498.0" layoutY="365.0" mnemonicParsing="false" onAction="#OnStartGame" text="Start Game" />
-        <FlowPane fx:id="PlayerIn" layoutX="14.0" layoutY="107.0" prefHeight="254.00009999999747" prefWidth="572.0" />
-        <Label fx:id="errorMessageLabel" layoutX="53.0" layoutY="68.0" prefHeight="21.9609375" prefWidth="511.0" text="" textAlignment="JUSTIFY" textFill="#ff3333" underline="true">
+        <FlowPane fx:id="PlayerIn" layoutX="14.0" layoutY="172.0" prefHeight="189.00009999999747" prefWidth="572.0" />
+        <Label fx:id="errorMessageLabel" layoutX="53.0" layoutY="72.0" prefHeight="21.9609375" prefWidth="511.0" text="" textAlignment="JUSTIFY" textFill="#ff3333" underline="true">
           <font>
             <Font size="12.0" />
           </font>
@@ -27,6 +27,15 @@
             <URL value="@resources/CSS/createplayersscreen.css" />
           </stylesheets>
         </Label>
+        <Label layoutX="14.0" layoutY="28.0" text="Choose Player Type" />
+        <ComboBox fx:id="cbPlayerType" editable="false" layoutX="153.0" layoutY="29.0" onAction="#SetPlayerType" prefWidth="87.0" promptText="PlayerType">
+          <items>
+            <FXCollections fx:factory="observableArrayList">
+              <String fx:value="Human" />
+              <String fx:value="Computer" />
+            </FXCollections>
+          </items>
+        </ComboBox>
       </children>
     </Pane>
   </children>
