--- a/BlackJackFX/src/blackjackfx/resources/CSS/createplayersscreen.css
+++ b/BlackJackFX/src/blackjackfx/resources/CSS/createplayersscreen.css
@@ -6,17 +6,24 @@
 
 }
 
+.button{
+    -fx-effect: dropshadow(one-pass-box, black, 8, 0, 2, 2);
+    
+}
 #AnchorPane{
     -fx-background-image: url('/blackjackfx/resources/Images/Background/bg_green.png');
 }
 #errorMessageLabel{
     -fx-alignment: center;
     -fx-text-fill: red;
+    -fx-font-size: 20 px;
     
 }
 
 .label{
-    -fx-font: 16px "serif";
+    -fx-font-family :"serif";
+    -fx-font-weight: "bold";
+    -fx-font-size: 16 px;
    -fx-text-fill: white;
     
 }
