--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -11,19 +11,24 @@
 
 <AnchorPane id="AnchorPane" minWidth="1079.0" prefHeight="682.0" prefWidth="1079.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="blackjackfx.Controllers.GameScreenController">
   <children>
-    <ImageView id="bacgreen.png" fitHeight="682.0" fitWidth="1087.0" layoutX="1.0" layoutY="0.0">
+    <ImageView id="bacgreen.png" fitHeight="682.0" fitWidth="1087.0" layoutX="-4.0" layoutY="0.0">
       <image>
         <Image url="file:/C:/Users/yakir/Desktop/CardsPic/bacgreen.png" preserveRatio="true" smooth="true" />
       </image>
     </ImageView>
     <HBox fx:id="DealerCards" layoutX="398.0" layoutY="104.0" prefHeight="100.0" prefWidth="283.0" />
     <Pane fx:id="DealerInfo" layoutX="468.0" layoutY="14.0" prefHeight="100.0" prefWidth="120.0" />
-    <Pane fx:id="Player1" layoutX="24.0" layoutY="394.0" prefHeight="86.0" prefWidth="100.0" />
+    <Pane fx:id="Player1" layoutX="14.0" layoutY="214.0" prefHeight="86.0" prefWidth="100.0" />
     <Pane fx:id="Player6" layoutX="965.0" layoutY="214.0" prefHeight="86.0" prefWidth="100.0" />
     <Pane fx:id="Player5" layoutX="965.0" layoutY="407.0" prefHeight="86.0" prefWidth="100.0" />
-    <Pane fx:id="Player2" layoutX="184.0" layoutY="535.0" prefHeight="86.0" prefWidth="100.0" />
+    <Pane fx:id="Player2" layoutX="14.0" layoutY="407.0" prefHeight="86.0" prefWidth="100.0" />
     <Pane fx:id="Player4" layoutX="803.0" layoutY="535.0" prefHeight="86.0" prefWidth="100.0" />
-    <Pane fx:id="Player3" layoutX="478.0" layoutY="596.0" prefHeight="86.0" prefWidth="100.0" />
+    <Pane fx:id="Player3" layoutX="165.0" layoutY="549.0" prefHeight="86.0" prefWidth="100.0" />
+    <Button layoutX="40.0" layoutY="22.0" mnemonicParsing="false" onAction="#StartRound" prefHeight="24.0" prefWidth="100.0" text="Start Round" />
+    <Button fx:id="btnDouble" layoutX="484.0" layoutY="493.0" mnemonicParsing="false" text="Double" />
+    <Button fx:id="btnHit" layoutX="484.0" layoutY="529.0" mnemonicParsing="false" prefWidth="59.0" text="Hit" />
+    <Button fx:id="btnSplit" layoutX="484.0" layoutY="568.0" mnemonicParsing="false" prefWidth="59.000099999997474" text="Split" />
+    <Button fx:id="btnStay" layoutX="484.0" layoutY="607.0" mnemonicParsing="false" prefWidth="59.0" text="Stay" />
   </children>
   <stylesheets>
     <URL value="@resources/CSS/gamescreen.css" />
