--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?scenebuilder-stylesheet resources/CSS/gamescreen.css?>
 
-<AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="667.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml"  fx:controller="blackjackfx.Controllers.GameScreenController">
+<AnchorPane id="AnchorPane" minHeight="657.0" minWidth="991.0" prefHeight="667.0" prefWidth="999.999977929685" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml" fx:controller="blackjackfx.Controllers.GameScreenController">
   <children>
     <ImageView id="bacgreen2.png" layoutX="0.0" layoutY="1.0">
       <image>
@@ -26,12 +26,15 @@
     <Button fx:id="btnContinue" layoutX="456.0" layoutY="455.0" mnemonicParsing="false" onAction="#ContinuePress" text="Continue Game" />
     <Button fx:id="btnSaveGame" layoutX="471.0" layoutY="497.0" mnemonicParsing="false" onAction="#SavePress" text="Save Game" />
     <Button fx:id="btnExitGame" layoutX="493.0" layoutY="528.0" mnemonicParsing="false" onAction="#ExitPress" text="Exit" />
-    <HBox id="" fx:id="Players1t3" layoutX="14.0" layoutY="563.0" prefHeight="100.0" prefWidth="388.0" />
-    <HBox fx:id="Players4t6" layoutX="598.0" layoutY="563.0" prefHeight="100.0" prefWidth="388.0" />
-    <HBox fx:id="hbxPlayer1Bids" layoutX="8.0" layoutY="211.0" prefHeight="352.0" prefWidth="120.0">
+    <HBox fx:id="hbxPlayers" layoutX="-1.0" layoutY="204.0" prefHeight="464.0" prefWidth="987.0">
       <children>
-        <VBox fx:id="vbxPlayer1Bid1" prefHeight="352.0" prefWidth="58.0" />
-        <VBox id="vbxPlayer1Bid1" fx:id="vbxPlayer1Bid2" prefHeight="352.0" prefWidth="60.0" />
+        <AnchorPane fx:id="apPlayer1" prefHeight="456.0" prefWidth="135.0">
+          <children>
+            <VBox id="vbxPlayer1Bid2" fx:id="vbxPlayerBid1b" layoutX="56.0" layoutY="0.0" prefHeight="350.0" prefWidth="72.0" />
+            <VBox id="vbxPlayer1Bid1" fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="0.0" prefHeight="350.0" prefWidth="58.0" />
+            <Pane fx:id="pPlayerPane1" layoutX="-6.0" layoutY="357.0" prefHeight="98.0" prefWidth="135.0" />
+          </children>
+        </AnchorPane>
       </children>
     </HBox>
   </children>
