--- a/BlackJackFX/src/blackjackfx/GameScreen.fxml
+++ b/BlackJackFX/src/blackjackfx/GameScreen.fxml
@@ -30,8 +30,8 @@
       <children>
         <AnchorPane fx:id="apPlayer1" prefHeight="456.0" prefWidth="135.0">
           <children>
-            <VBox id="vbxPlayer1Bid2" fx:id="vbxPlayerBid1b" layoutX="56.0" layoutY="0.0" prefHeight="350.0" prefWidth="72.0" />
-            <VBox id="vbxPlayer1Bid1" fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="0.0" prefHeight="350.0" prefWidth="58.0" />
+            <VBox fx:id="vbxPlayerBid1b" layoutX="56.0" layoutY="0.0" prefHeight="350.0" prefWidth="72.0" />
+            <VBox fx:id="vbxPlayerBid1a" layoutX="0.0" layoutY="0.0" prefHeight="350.0" prefWidth="58.0" />
             <Pane fx:id="pPlayerPane1" layoutX="-6.0" layoutY="357.0" prefHeight="98.0" prefWidth="135.0" />
           </children>
         </AnchorPane>
